memoria compartida y semaforos

--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
                 </ul>
          </div>
      </h3>
-   
-	 <a href="index.html?b1">Hilos con Mutex</a>
-                  
+     <h3>Ejercicio con mutex
+	 	 <a href="index.html?b1">Hilos con Mutex</a>
+     </h3>
+	 <h3>Ejercicio con memoria compartida y semaforos
+	 	 <a href="index.html?c1">Determinar si el valor ingresado con -n es par o impar</a>
+     </h3>          
   </body>
 
 </html>
